--- a/src/module/index/index.html
+++ b/src/module/index/index.html
@@ -10,16 +10,13 @@
     <div id="index">
         <ul>
             <li>
-                <router-link to='/index'>index</router-link>
-            </li>
-            <li>
                 <router-link to='/add'>add</router-link>
             </li>
             <li>
                 <router-link to='/list'>list</router-link>
             </li>
         </ul>
-        <router-view class='view'></router-view>
+        <router-view class="view"></router-view>
     </div>
     <!-- built files will be auto injected -->
 </body>
